<resources>
    <string name="app_name" translatable="false">Do you like my style?</string>
    <string name="facebook_app_id" translatable="false">1139940946087783</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="minimum_password_length">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, did you activate your account?</string>
    <string name="enter_password">Enter password!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="btn_link_to_login">Already registered. Sign me in!</string>
    <string name="action_sign_in_short">Register</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your email to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="enter_registered_email">Enter the email you registered with</string>
    <string name="password_reset_instructions">We have sent you instructions to reset your password!</string>
    <string name="reset_emailsend_fail">Failed to send password reset email!</string>
    <string name="btn_fb_login">Sign in with Facebook</string>
    <string name="email_collision">A user with this email already exists</string>
    <string name="startCamera">New picture</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
